5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1601_1800.log
== TEST (2019-03-20 17:55:25) 
-- CODE:
a = int(input ("Escreva um numero: "))
b = int(input ("Escreva um numero: "))
c = int(input ("Escreva um numero: "))
print((a**2 + b**2 + c**2)/ (a+b+c))
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:56:01) 
-- CODE:
a = int(input ("Escreva um numero: "))
b = int(input ("Escreva um numero: "))
c = int(input ("Escreva um numero: "))
print((a**2 + b**2 + c**2)/ (a+b+c))
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:58:03) 
-- CODE:
a = 5
b = 8
c = 9
print((a**2 + b**2 + c**2)/ (a+b+c))
-- OUTPUT:
7.7272727272727275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:58:14) 
-- CODE:
a = 5
b = 8
c = 9
print(round(a**2 + b**2 + c**2)/ (a+b+c))
-- OUTPUT:
7.7272727272727275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:58:22) 
-- CODE:
a = 5
b = 8
c = 9
print(round(a**2 + b**2 + c**2)/ (a+b+c),6)
-- OUTPUT:
7.7272727272727275 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:58:30) 
-- CODE:
a = 5
b = 8
c = 9
print(round(a**2 + b**2 + c**2)/ (a+b+c).6)
-- ERROR:
File "XXXX", line 4
    print(round(a**2 + b**2 + c**2)/ (a+b+c).6)
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:59:01) 
-- CODE:
a = 5
b = 8
c = 9
print((round a**2 + b**2 + c**2)/ (a+b+c))
-- ERROR:
File "XXXX", line 4
    print((round a**2 + b**2 + c**2)/ (a+b+c))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:59:20) 
-- CODE:
a = 5
b = 8
c = 9
print((a**2 + b**2 + c**2)/ (a+b+c))
-- OUTPUT:
7.7272727272727275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:59:48) 
-- CODE:
a = 5
b = 8
c = 9
print(round(a**2 + b**2 + c**2)/ (a+b+c).6)
-- ERROR:
File "XXXX", line 4
    print(round(a**2 + b**2 + c**2)/ (a+b+c).6)
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 17:59:56) 
-- CODE:
a = 5
b = 8
c = 9
print(round.6(a**2 + b**2 + c**2)/ (a+b+c))
-- ERROR:
File "XXXX", line 4
    print(round.6(a**2 + b**2 + c**2)/ (a+b+c))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:00:01) 
-- CODE:
a = 5
b = 8
c = 9
print(round(a**2 + b**2 + c**2)/ (a+b+c))
-- OUTPUT:
7.7272727272727275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:00:28) 
-- CODE:
a = 5
b = 8
c = 9
print((round(a**2 + b**2 + c**2)/ (a+b+c),6))
-- OUTPUT:
(7.7272727272727275, 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:01:34) 
-- CODE:
a = 5
b = 8
c = 9
print(round(a**2 + b**2 + c**2/ a+b+c),6)
-- OUTPUT:
122 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:10:08) 
-- CODE:
# primeiro vamos ler tres variaveis quaisquer
a = int(input("digite um numero: "))
b = int(input("digite um numero: "))
c = int(input("digite um numero: "))
d = a**2 + b**2 + c**2
e = a+b+c
f = round(d/e,6)
print(f)

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:10:32) 
-- CODE:
# primeiro vamos ler tres variaveis quaisquer
a = int(input("digite um numero: "))
b = int(input("digite um numero: "))
c = int(input("digite um numero: "))
d = a**2 + b**2 + c**2
e = a+b+c
f = round(d/e,6)
print(f)

-- EXECUTION TIME:
0.114159
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:10:38) 
-- CODE:
# primeiro vamos ler tres variaveis quaisquer
a = int(input("digite um numero: "))
b = int(input("digite um numero: "))
c = int(input("digite um numero: "))
d = a**2 + b**2 + c**2
e = a+b+c
f = round(d/e,7)
print(f)

-- EXECUTION TIME:
0.15117
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
